# adventofcode2019

./: .gitignore
template/c/: CMakeLists.txt  input  main.c
template/c/adventofcode/: CMakeLists.txt  common.c  common.h  day1.c  day1.h
template/c/tests/: CMakeLists.txt
typescript/: build-template.ts  package.json  tsconfig.json
typescript/day1/src/: day1.spec.ts  index.ts  runner.ts
typescript/day10/src/: day10.spec.ts  index.ts  runner.ts
typescript/day11/src/: day11.spec.ts  index.ts  runner.ts
typescript/day12/: package.json
typescript/day12/src/: day12.spec.ts  index.ts  runner.ts
typescript/day13/src/: index.ts  runner.ts
typescript/day14/src/: day14.spec.ts  index.ts  runner.ts
typescript/day15/src/: index.ts  runner.ts
typescript/day16/src/: day16.spec.ts  index.ts  runner.ts
typescript/day17/src/: day17.spec.ts  index.ts  manual-soul.txt  runner.ts
typescript/day19/src/: day19.spec.ts  index.ts  runner.ts
typescript/day2/: tsconfig.json
typescript/day2/src/: day2.spec.ts  index.ts  phase2-extra.ts  runner.ts
typescript/day20/src/: day20.spec.ts  index-2.ts  index.ts  runner.ts
typescript/day21/src/: index.ts  runner.ts
typescript/day22/src/: day22.spec.ts  index.ts  runner.ts
typescript/day25/src/: index.ts  runner.ts
typescript/day3/src/: day3.spec.ts  index.ts  runner.ts
typescript/day4/: package.json
typescript/day4/src/: day4.spec.ts  index.ts  runner.ts
typescript/day5/src/: day5.spec.ts  index.ts  runner.ts
typescript/day6/src/: day6.spec.ts  index.ts  runner.ts
typescript/day8/: tsconfig.json
(+14 files in other folders)
